--- a/package.json
+++ b/package.json
@@ -10,16 +10,13 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "next": "15.5.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "24.6.1",
-    "@types/react": "19.1.16",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "typescript": "5.9.3"
+    "@eslint/eslintrc": "^3"
   }
 }
